add Stripe checkout.js, add buttons ID

--- a/pricing.html
+++ b/pricing.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <script src="https://checkout.stripe.com/checkout.js"></script>
+
   
   
   
@@ -129,7 +131,7 @@
                         </ul>
                     </div>
                     <div class="mbr-section-btn text-center py-4 pb-5">
-                        <a href="https://mobirise.com" class="btn btn-primary">BUY NOW</a>
+                        <button id="basic" class="btn btn-primary display-4">BUY NOW</button>
                     </div>
                 </div>
             </div>
@@ -157,7 +159,7 @@
                         </ul>
                     </div>
                     <div class="mbr-section-btn text-center py-4 pb-5">
-                        <a href="https://mobirise.com" class="btn btn-primary display-4">BUY NOW</a>
+                        <button id="plus" class="btn btn-primary display-4">BUY NOW</button>
                     </div>
                 </div>
             </div>
@@ -184,7 +186,8 @@
                                 1 Request/week</strong></li><li class="list-group-item">Upload up to 10 products</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="https://mobirise.com" class="btn btn-primary display-4">BUY NOW</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5">
+                    <button id="premium" class="btn btn-primary display-4">BUY NOW</button></div>
                 </div>
             </div>
 
@@ -339,6 +342,7 @@
   <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
+  <script src="assets/app.js"></script>
   
   
 <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
